# train

./: .gitignore  .gitmodules  README.md  evaluate.py  finetune.sh  main.py  merge.sh  model.py  pyproject.toml  test.py
